fixed flexbox wrap in portfolio. changed background image settings for index jumbotron. fixed margins

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,3 @@
-.endpoint {
-    height: 10px;
-    width: 100%;
-}
-
 a:link {
     color: white;
 }
@@ -195,7 +190,12 @@ a:active {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
+    background-color: gray;
+}
+
+.bottom-margin {
+    margin: 1000px;
 }
 
 
@@ -243,6 +243,14 @@ a:active {
 
     .footer {
         padding-bottom: 10%;
+    }
+
+    #jumbotron-main {
+        background-image: url("./assets/images/prof2.jpg");
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
     }
   }
  
